# cogsworth

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.c  neuron.c  neuron.h  sigmoid.h
src/: args.rs  layer.c  layer.h  layer.rs  main.c  main.rs  network.c  network.h  network.rs  neuron.c  neuron.h  neuron.rs  propagation.c  propagation.h  sigmoid.c  utils.c  utils.h
tools/: adapt_text_file.py  generate_spm.py
