[package]
name = "cogsworth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cogsworth"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.1", features = [ "cargo" ] }
sentencepiece = "0.11.1"
rand = "0.8.4"
